# dbks_optimize/pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks_optimize"
version = "0.1.0"
authors = [
  { name="Marco Lombardi", email="m.lombardi@live.it" },
]
description = "Databricks utility to identify which column to use for z-ordering and partitioning."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyspark>=3.0.0",
    "pandas>=1.3.0",
]

[tool.setuptools]
packages = ["dbks_optimize"]

[tool.setuptools.packages]
find = {where = ["src"]}